sumo/tests/sumo/extended/simulation_routing/assignment/errors/trip_with_taz_disconnect/errors.sumo
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No route for vehicle '0' found (skipping vehicle).
Error: Vehicle '0' has no valid route. No connection between edge '2-source' and edge '1-sink'.
Quitting (on error).
